# gradium-py

./: .gitignore  Makefile  README.md  pyproject.toml
docs/: api.rst  api_doc.md  conf.py  faq.md  index.rst  post_tts_description.md  quickstart.rst  requirements.txt  rewriting_rules.md  websocket_protocols.rst  websocket_stt_description.md  websocket_tts_description.md
docs/_templates/sidebar/: navigation.html
examples/: stt_streaming.py  temp_token.py  tts_streaming.py
gradium/: __init__.py  cli.py  client.py  speech.py  stream.py  usages.py  voices.py
notebooks/: gradium_example_eu.ipynb  gradium_example_us.ipynb
