[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gradium"
dynamic = ["version"]
description = "Python client for Gradium API"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "Gradium AI", email = "contact@gradium.ai" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = ["aiohttp", "numpy"]

[project.optional-dependencies]
dev = ["black", "ruff", "mypy", "pytest", "pytest-asyncio"]


[tool.black]
line-length = 80
target-version = ["py312"]

[tool.ruff]
line-length = 80
target-version = "py312"
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "PIE", "T20"]
ignore = ["E501"]

[tool.ruff.isort]
known-first-party = ["gradium"]

[tool.hatch.version]
path = "gradium/version.py"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
